--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Yash Personal Page</title>
-    <link rel="stylesheet" type="text/css" href="C:\Users\yash\Documents\web deveopment\css\styles.css">
-    <link rel="icon" href="C:\Users\yash\Documents\web deveopment\images\IMG_20190309_102031.jpg">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/IMG_20190309_102031.jpg">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 
   </head>
   <body>
     <section class="top-container" >
-      <img class="forest-left" src="C:\Users\yash\Documents\web deveopment\images\forest.png" alt="cloud">
+      <img class="forest-left" src="images/forest.png" alt="cloud">
       <div >
-<img class="forest-right" src="C:\Users\yash\Documents\web deveopment\images\forest.png" alt="cloud">
+<img class="forest-right" src="images\forest.png" alt="cloud">
         <h1>I'm Yash</h1>
         <p>A web Designer</p>
-        <img id="mountain" src="C:\Users\yash\Documents\web deveopment\images\mountains.png" alt="">
+        <img id="mountain" src="images\mountains.png" alt="">
     </div>
     </section>
     <section class="hello">
@@ -23,7 +23,7 @@
 
         <article class="art">
         <figure>
-        <img src="C:\Users\yash\Documents\web deveopment\images\IMG_20190309_102031.jpg" class="pp" alt="" >
+        <img src="images\IMG_20190309_102031.jpg" class="pp" alt="" >
       </figure>
       <h3> Hi </h3>
       <p id="hi">I'm a web designer / developer based in Sangrur, India.</p>
@@ -33,7 +33,7 @@
     </div>
     </section>
     <div id="break">
-      <img src="C:\Users\yash\Documents\web deveopment\images\braker.PNG" alt="" id="brk">
+      <img src="images\braker.PNG" alt="" id="brk">
     </div>
     <section class="wcid">
       <div id="head">
@@ -43,7 +43,7 @@
             What I can do.
           </h3></header>
         <figure>
-<img src="C:\Users\yash\Documents\web deveopment\images\wcid.PNG" alt="" id="wcid">
+<img src="images\wcid.PNG" alt="" id="wcid">
       </figure>
       <h5>Design What you want.</h5>
       <p id="hi">I like to keep it simple. My goals are to focus on typography, content and conveying</p>
@@ -57,7 +57,7 @@
 
         <article class="art">
           <figure>
-      <img src="C:\Users\yash\Documents\web deveopment\images\dwyn.PNG" alt="" id="dwyn">
+      <img src="images\dwyn.PNG" alt="" id="dwyn">
         </figure>
           <header><h5>
             Develop what you need.
@@ -69,7 +69,7 @@
     </div>
   </section>
     <div id="break">
-      <img src="C:\Users\yash\Documents\web deveopment\images\braker.PNG" alt="" id="brk">
+      <img src="images\braker.PNG" alt="" id="brk">
     </div>
     <section class="ich">
       <div id="head">
@@ -81,7 +81,7 @@
           <h5>I'm currently available for freelance work.</h5>
           <p id="hi">If you have a project that you want to get started, think you need my help </p>
             <p id="hi">with something or just fancy saying hey, then get in touch.</p>
-      <a href="mailto:yashthakur1320msi@gmail.com"> <img src="C:\Users\yash\Documents\web deveopment\images\msg.PNG" alt="" id="msg"></a>
+      <a href="mailto:yashthakur1320msi@gmail.com"> <img src="images\msg.PNG" alt="" id="msg"></a>
         </article>
     </div>
     </section>
@@ -97,7 +97,7 @@
           </div>
           <div class="">
             <p class="bot"> © 2019
-              <a href="C:\Users\yash\Documents\web deveopment\mypage\index.html">Yashraj Thakur.</a>
+              <a href="index.html">Yashraj Thakur.</a>
               All rights reserved
              </p>
           </div>
